Fixed footer text alignment and contract title and description font sizes.

--- a/contracts/static/css/contracts.css
+++ b/contracts/static/css/contracts.css
@@ -107,12 +107,12 @@ button.open-button {
 }*/
 
 .contract-title {
-  font-size: 0.9em;
+  font-size: 1em;
   font-weight: bold;
 }
 
 .contract-description {
-  font-size: 0.8em;
+  font-size: 0.9em;
   color: #191919;
 }
 
